# demo-char-panel

./: README.md  demo-char-panel.cabal  demo-char-select.cabal
app/: Main.hs
doc/: Game-Character.html  Game-Panel-Field.html  Game-Panel.html  Game-Utils.html  Game.html  demo-char-panel.haddock  demo-char-panel.txt  doc-index.html  index.html  mini_Game-Character.html  mini_Game-Panel-Field.html  mini_Game-Panel.html  mini_Game-Utils.html  mini_Game.html
doc/src/: Game.Character.html  Game.Panel.Field.html  Game.Panel.html  Game.Utils.html  Game.html
src/: CharSelect.hs  Game.hs
src/CharSelect/: Character.hs  Form.hs  Panel.hs  Utils.hs
src/CharSelect/Panel/: Field.hs
src/Game/: Character.hs  Panel.hs  Utils.hs
src/Game/Panel/: Field.hs
